--- a/Alura.ByteBank.Infraestrutura.Teste/Alura.ByteBank.Infraestrutura.Teste.csproj
+++ b/Alura.ByteBank.Infraestrutura.Teste/Alura.ByteBank.Infraestrutura.Teste.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Alura.ByteBank.Dados\Alura.ByteBank.Dados.csproj" />
+  </ItemGroup>
+
 </Project>
